Initial commit for GitHub Pages with modern layout

--- a/index.html
+++ b/index.html
@@ -3,15 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INSA Automation Corp</title>
+    <title>INSA Automation Corp - Comprehensive Remote Design Solutions</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to INSA Automation Corp</h1>
+        <h1>INSA Automation Corp</h1>
     </header>
     <main>
-        <p>Your automation solutions partner.</p>
+        <section class="intro">
+            <h2>Comprehensive Remote Design Solutions</h2>
+            <p>We specialize in remote industrial automation and energy solutions, offering a wide range of services to optimize efficiency and sustainability across various sectors.</p>
+        </section>
+        <section class="services">
+            <h2>Our Services</h2>
+            <div class="service-grid">
+                <div class="service">
+                    <i class="fas fa-cogs"></i>
+                    <h3>Engineering</h3>
+                    <p>Expert engineering solutions for industrial automation.</p>
+                </div>
+                <div class="service">
+                    <i class="fas fa-robot"></i>
+                    <h3>Automation</h3>
+                    <p>Advanced automation services for increased efficiency.</p>
+                </div>
+                <div class="service">
+                    <i class="fas fa-bolt"></i>
+                    <h3>Energy</h3>
+                    <p>Sustainable energy solutions for various sectors.</p>
+                </div>
+                <div class="service">
+                    <i class="fas fa-tachometer-alt"></i>
+                    <h3>Instrumentation</h3>
+                    <p>Precision instrumentation services for accurate measurements.</p>
+                </div>
+                <div class="service">
+                    <i class="fas fa-digital-tachograph"></i>
+                    <h3>Digitalization</h3>
+                    <p>Digital transformation services to modernize your operations.</p>
+                </div>
+                <div class="service">
+                    <i class="fas fa-industry"></i>
+                    <h3>Manufacturing & F&B</h3>
+                    <p>Comprehensive solutions for manufacturing and food & beverage industries.</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <p>&copy; 2024 INSA Automation Corp</p>
