Added Water and Waste Water service and emphasized remote work focus

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <section class="intro">
             <h2>Comprehensive Remote Design Solutions</h2>
             <p>We specialize in remote industrial automation and energy solutions, offering a wide range of services to optimize efficiency and sustainability across various sectors.</p>
+            <p>Our focus is on remote work, delivering all needed instruments, parts, and programming assembled in pieces, except for installation.</p>
         </section>
         <section class="services">
             <h2>Our Services</h2>
@@ -48,6 +49,11 @@
                     <i class="fas fa-industry"></i>
                     <h3>Manufacturing & F&B</h3>
                     <p>Comprehensive solutions for manufacturing and food & beverage industries.</p>
+                </div>
+                <div class="service">
+                    <i class="fas fa-water"></i>
+                    <h3>Water and Waste Water</h3>
+                    <p>Specialized solutions for water and waste water management.</p>
                 </div>
             </div>
         </section>
