Added Water and Waste Water service and emphasized remote work focus 2

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,8 +15,8 @@
     <main>
         <section class="intro">
             <h2>Comprehensive Remote Design Solutions</h2>
-            <p>We specialize in remote industrial automation and energy solutions, offering a wide range of services to optimize efficiency and sustainability across various sectors.</p>
-            <p>Our focus is on remote work, delivering all needed instruments, parts, and programming assembled in pieces, except for installation.</p>
+            <p>We specialize in remote industrial automation and energy solutions, providing innovative services to optimize efficiency and sustainability across various sectors.</p>
+            <p>Our expertise lies in delivering complete remote solutions, ensuring seamless integration of instruments, parts, and programming, while handling all phases except for the final installation.</p>
         </section>
         <section class="services">
             <h2>Our Services</h2>
@@ -23,37 +24,37 @@
                 <div class="service">
                     <i class="fas fa-cogs"></i>
                     <h3>Engineering</h3>
-                    <p>Expert engineering solutions for industrial automation.</p>
+                    <p>Providing expert solutions in design and engineering for industrial automation projects.</p>
                 </div>
                 <div class="service">
                     <i class="fas fa-robot"></i>
                     <h3>Automation</h3>
-                    <p>Advanced automation services for increased efficiency.</p>
+                    <p>Advanced automation services aimed at enhancing operational efficiency and productivity.</p>
                 </div>
                 <div class="service">
                     <i class="fas fa-bolt"></i>
                     <h3>Energy</h3>
-                    <p>Sustainable energy solutions for various sectors.</p>
+                    <p>Implementing sustainable energy solutions to reduce environmental impact and improve efficiency.</p>
                 </div>
                 <div class="service">
                     <i class="fas fa-tachometer-alt"></i>
                     <h3>Instrumentation</h3>
-                    <p>Precision instrumentation services for accurate measurements.</p>
+                    <p>Precision instrumentation services to ensure accurate measurement and control of processes.</p>
                 </div>
                 <div class="service">
                     <i class="fas fa-digital-tachograph"></i>
                     <h3>Digitalization</h3>
-                    <p>Digital transformation services to modernize your operations.</p>
+                    <p>Transforming operations through digitalization for improved measurement, control, and analysis.</p>
                 </div>
                 <div class="service">
                     <i class="fas fa-industry"></i>
                     <h3>Manufacturing & F&B</h3>
-                    <p>Comprehensive solutions for manufacturing and food & beverage industries.</p>
+                    <p>Comprehensive solutions tailored to the manufacturing and food & beverage industries.</p>
                 </div>
                 <div class="service">
                     <i class="fas fa-water"></i>
                     <h3>Water and Waste Water</h3>
-                    <p>Specialized solutions for water and waste water management.</p>
+                    <p>Specialized services for the management and optimization of water and wastewater processes.</p>
                 </div>
             </div>
         </section>
@@ -63,3 +64,4 @@
     </footer>
 </body>
 </html>
+```
