Added Water and Waste Water service and emphasized remote work focus 3

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,8 +14,8 @@
     <main>
         <section class="intro">
             <h2>Comprehensive Remote Design Solutions</h2>
-            <p>We specialize in remote industrial automation and energy solutions, providing innovative services to optimize efficiency and sustainability across various sectors.</p>
-            <p>Our expertise lies in delivering complete remote solutions, ensuring seamless integration of instruments, parts, and programming, while handling all phases except for the final installation.</p>
+            <p>We specialize in remote industrial automation and energy solutions, offering a wide range of services to optimize efficiency and sustainability across various sectors.</p>
+            <p>Our focus is on remote work, delivering all needed instruments, parts, and programming assembled in pieces, except for installation.</p>
         </section>
         <section class="services">
             <h2>Our Services</h2>
@@ -24,39 +23,124 @@
                 <div class="service">
                     <i class="fas fa-cogs"></i>
                     <h3>Engineering</h3>
-                    <p>Providing expert solutions in design and engineering for industrial automation projects.</p>
+                    <p>Expert engineering solutions for industrial automation.</p>
                 </div>
                 <div class="service">
                     <i class="fas fa-robot"></i>
                     <h3>Automation</h3>
-                    <p>Advanced automation services aimed at enhancing operational efficiency and productivity.</p>
+                    <p>Advanced automation services for increased efficiency.</p>
                 </div>
                 <div class="service">
                     <i class="fas fa-bolt"></i>
                     <h3>Energy</h3>
-                    <p>Implementing sustainable energy solutions to reduce environmental impact and improve efficiency.</p>
+                    <p>Sustainable energy solutions for various sectors.</p>
                 </div>
                 <div class="service">
                     <i class="fas fa-tachometer-alt"></i>
                     <h3>Instrumentation</h3>
-                    <p>Precision instrumentation services to ensure accurate measurement and control of processes.</p>
+                    <p>Precision instrumentation services for accurate measurements.</p>
                 </div>
                 <div class="service">
                     <i class="fas fa-digital-tachograph"></i>
                     <h3>Digitalization</h3>
-                    <p>Transforming operations through digitalization for improved measurement, control, and analysis.</p>
+                    <p>Digital transformation services to modernize your operations.</p>
                 </div>
                 <div class="service">
                     <i class="fas fa-industry"></i>
                     <h3>Manufacturing & F&B</h3>
-                    <p>Comprehensive solutions tailored to the manufacturing and food & beverage industries.</p>
+                    <p>Comprehensive solutions for manufacturing and food & beverage industries.</p>
                 </div>
                 <div class="service">
                     <i class="fas fa-water"></i>
                     <h3>Water and Waste Water</h3>
-                    <p>Specialized services for the management and optimization of water and wastewater processes.</p>
+                    <p>Specialized solutions for water and waste water management.</p>
                 </div>
             </div>
+        </section>
+        <section class="capabilities">
+            <h2>Capabilities Statement</h2>
+            <h3>Company Overview</h3>
+            <p>Founded in November 2022, INSA Automation Corp specializes in delivering comprehensive remote design solutions, industrial automation, and energy efficiency services. Leveraging the expertise of our sister company, Insa Ingeniería SAS, established in 2010, we bring a rich legacy of optimized processes, enhanced efficiency, and sustainable solutions across various sectors, including Oil & Gas, Water & Wastewater, Food & Beverage, and Energy.</p>
+
+            <h3>Core Services</h3>
+            <ul>
+                <li><strong>Engineering:</strong>
+                    <ul>
+                        <li>Design and Engineering</li>
+                        <li>Basic and Detail Engineering</li>
+                        <li>Mechanical and Process Engineering</li>
+                        <li>Electrification</li>
+                        <li>Renewable Energies</li>
+                        <li>Digitalization (IoT)</li>
+                    </ul>
+                </li>
+                <li><strong>Automation:</strong>
+                    <ul>
+                        <li>Automated Control Systems</li>
+                        <li>PLC Programming</li>
+                        <li>System Integration</li>
+                        <li>Remote Monitoring</li>
+                    </ul>
+                </li>
+                <li><strong>Energy:</strong>
+                    <ul>
+                        <li>Sustainable Energy Solutions</li>
+                        <li>Energy Efficiency Analysis</li>
+                        <li>Power Generation and Distribution</li>
+                        <li>Grid, Hybrid, and Off-Grid Systems</li>
+                    </ul>
+                </li>
+                <li><strong>Instrumentation:</strong>
+                    <ul>
+                        <li>Design and Supply</li>
+                        <li>Instrumentation Maintenance and Calibration</li>
+                        <li>Pre-Commissioning and Commissioning</li>
+                        <li>Environmental Monitoring</li>
+                    </ul>
+                </li>
+                <li><strong>Digitalization:</strong>
+                    <ul>
+                        <li>Digital Transformation Services</li>
+                        <li>Measurement and Control of Process Conditions</li>
+                        <li>Data Analysis and Predictive Maintenance</li>
+                        <li>Cloud Services and IoT</li>
+                    </ul>
+                </li>
+                <li><strong>Water and Wastewater:</strong>
+                    <ul>
+                        <li>Management and Optimization Solutions</li>
+                        <li>Analytical Treatment of Water and Gases</li>
+                        <li>Environmental Monitoring</li>
+                    </ul>
+                </li>
+                <li><strong>Manufacturing & Food & Beverage:</strong>
+                    <ul>
+                        <li>Comprehensive Solutions for Manufacturing Processes</li>
+                        <li>Specialized Services for Food & Beverage Industries</li>
+                    </ul>
+                </li>
+            </ul>
+
+            <h3>Past Performance</h3>
+            <p><strong>Gran Tierra Energy:</strong> Implemented a wireless measurement system incorporating digitization, instrumentation, and automation.</p>
+            <p><strong>Alkhorayef Petroleum Company:</strong> Designed and constructed Electrical and Instrumentation Skids in Oman.</p>
+            <p><strong>Lupatech:</strong> Developed process control systems with digitalization across various fields.</p>
+            <p><strong>Ecopetrol:</strong> Executed multiple projects involving process engineering, equipment assembly, and commissioning.</p>
+
+            <h3>Differentiators</h3>
+            <ul>
+                <li><strong>Experience:</strong> Over 13 years of expertise through Insa Ingeniería SAS in design and engineering projects across multiple sectors.</li>
+                <li><strong>Innovation:</strong> Adoption of cutting-edge technology and digital solutions to optimize processes.</li>
+                <li><strong>Comprehensive Solutions:</strong> From design and engineering to commissioning and maintenance, we provide end-to-end services.</li>
+                <li><strong>Sustainability:</strong> Emphasis on energy-efficient and sustainable solutions.</li>
+                <li><strong>Client-Centric Approach:</strong> Tailored solutions to address the specific needs and challenges of our clients.</li>
+                <li><strong>Global Reach:</strong> Successfully executed projects in the USA, Ecuador, Colombia, and Oman.</li>
+            </ul>
+
+            <h3>Contact Information</h3>
+            <p><strong>USA Office:</strong></p>
+            <p>5900 Balcones Drive #100, Austin, TX</p>
+            <p>Phone: (+1) 786-737-9418 / (+1) 713-309-9636</p>
         </section>
     </main>
     <footer>
@@ -64,4 +148,3 @@
     </footer>
 </body>
 </html>
-```
