--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
 <body>
     <header>
         <h1>INSA Automation Corp</h1>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#services">Services</a>
+            <a href="#capabilities">Capabilities</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </header>
-    <main>
+    <main id="home">
         <section class="intro">
             <h2>Comprehensive Remote Design Solutions</h2>
             <p>We specialize in remote industrial automation and energy solutions, offering a wide range of services to optimize efficiency and sustainability across various sectors.</p>
             <p>Our focus is on remote work, delivering all needed instruments, parts, and programming assembled in pieces, except for installation.</p>
         </section>
-        <section class="services">
+        <section class="services" id="services">
             <h2>Our Services</h2>
             <div class="service-grid">
                 <div class="service">
@@ -57,7 +63,7 @@
                 </div>
             </div>
         </section>
-        <section class="capabilities">
+        <section class="capabilities" id="capabilities">
             <h2>Capabilities Statement</h2>
             <h3>Company Overview</h3>
             <p>Founded in November 2022, INSA Automation Corp specializes in delivering comprehensive remote design solutions, industrial automation, and energy efficiency services. Leveraging the expertise of our sister company, Insa Ingeniería SAS, established in 2010, we bring a rich legacy of optimized processes, enhanced efficiency, and sustainable solutions across various sectors, including Oil & Gas, Water & Wastewater, Food & Beverage, and Energy.</p>
@@ -143,7 +149,7 @@
             <p>Phone: (+1) 786-737-9418 / (+1) 713-309-9636</p>
         </section>
     </main>
-    <footer>
+    <footer id="contact">
         <p>&copy; 2024 INSA Automation Corp</p>
     </footer>
 </body>
