--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INSA Automation Corp - Comprehensive Remote Design Solutions</title>
+    <title>INSA Automation Corp - Comprehensive Remote Design Solutions(SDVOSB)</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -147,6 +147,8 @@
             <p><strong>USA Office:</strong></p>
             <p>5900 Balcones Drive #100, Austin, TX</p>
             <p>Phone: (+1) 786-737-9418 / (+1) 713-309-9636</p>
+            <p>Email W.Aroca@insaing.com</p>
+            <p>Website https://wilbtc.github.io/InsaAutomationCorp</p>
         </section>
     </main>
     <footer id="contact">
