--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>INSA Automation Corp</h1>
+        <h1>INSA Automation Corp SDVOSB</h1>
         <nav>
             <a href="#home">Home</a>
             <a href="#services">Services</a>
