--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section class="intro">
             <h2>Comprehensive Remote Design Solutions</h2>
             <p>We specialize in remote industrial automation and energy solutions, offering a wide range of services to optimize efficiency and sustainability across various sectors.</p>
-            <p>Our focus is on remote work, delivering all needed instruments, parts, and programming assembled in pieces, except for installation.</p>
+            <p>Our focus is on remote work, delivering all needed instruments, parts, and programming.</p>
         </section>
         <section class="services" id="services">
             <h2>Our Services</h2>
