style(ui): update branding from Terragon Labs to INSA Automation Corp
Replaced all instances of 'Terragon Labs' with 'INSA Automation Corp' in index.html to reflect updated company branding. Added new CSS style for the SDVOSB label to enhance visual presentation in the header.

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nimbus Decentralized IoT Platform - Transform Your Industrial Operations | Terragon Labs</title>
+    <title>Nimbus Decentralized IoT Platform - Transform Your Industrial Operations | INSA Automation Corp</title>
     <meta name="description" content="Secure your industrial IoT infrastructure with Nimbus Decentralized Platform. Join the $35.5B IoT security market revolution. Get your free assessment today.">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -12,7 +12,7 @@
     <header>
         <div class="header-content">
             <div class="logo-section">
-                <h1>Terragon Labs</h1>
+                <h1>INSA Automation Corp <span class="sdvosb">(SDVOSB)</span></h1>
                 <span class="tagline">Powered by Nimbus Decentralized IoT Platform</span>
             </div>
             <div class="cta-header">
@@ -348,7 +348,7 @@
     <footer id="contact" class="contact-footer">
         <div class="footer-content">
             <div class="footer-section">
-                <h3>Terragon Labs</h3>
+                <h3>INSA Automation Corp</h3>
                 <p>Securing the future of industrial IoT with Nimbus Decentralized Platform</p>
                 <div class="contact-info">
                     <p><i class="fas fa-map-marker-alt"></i> 5900 Balcones Drive #100, Austin, TX</p>
@@ -390,7 +390,7 @@
         </div>
         
         <div class="footer-bottom">
-            <p>&copy; 2024 Terragon Labs | Nimbus Decentralized IoT Platform | Powered by 13+ years of INSA Ingeniería expertise</p>
+            <p>&copy; 2024 INSA Automation Corp | Nimbus Decentralized IoT Platform | Powered by 13+ years of INSA Ingeniería expertise</p>
         </div>
     </footer>
 </body>
