--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="hero-stats">
                         <div class="stat-item">
                             <div class="stat-value">15+</div>
-                            <div class="stat-label" data-i18n="hero.stats.experience">Years Experience</div>
+                            <div class="stat-label" data-i18n="hero.stats.experience">Industrial Experience</div>
                         </div>
                         <div class="stat-item">
                             <div class="stat-value">100%</div>
@@ -363,13 +363,13 @@
                     <div class="section-tag">Our Heritage</div>
                     <h2 data-i18n="about.title">About INSA Automation Corp</h2>
                     <p class="lead" data-i18n="about.subtitle">Your trusted partner in industrial cybersecurity</p>
-                    <p data-i18n="about.desc">INSA Automation Corp is a Service-Disabled Veteran-Owned Small Business with over 15 years of experience protecting critical infrastructure and industrial control systems. We combine deep OT/IT expertise with cutting-edge cybersecurity solutions.</p>
+                    <p data-i18n="about.desc">INSA Automation Corp, established in 2021, is a Service-Disabled Veteran-Owned Small Business that leverages over 15 years of industrial experience through our sister company INSA Ingeniería SAS. We combine deep OT/IT expertise with cutting-edge cybersecurity solutions.</p>
                     <p data-i18n="about.approach">Our approach integrates industry best practices, regulatory compliance, and real-world operational experience to deliver practical, effective security solutions that don't disrupt your operations.</p>
 
                     <div class="heritage-stats">
                         <div class="heritage-stat">
                             <div class="stat-number">15+</div>
-                            <div class="stat-text">Years of Expertise</div>
+                            <div class="stat-text" data-i18n="about.stats.expertise">Years Industrial Expertise</div>
                         </div>
                         <div class="heritage-stat">
                             <div class="stat-number">100+</div>
@@ -418,7 +418,7 @@
                                 <i class="fas fa-building"></i>
                             </div>
                             <h4 data-i18n="global.company.title">About INSA Ingeniería SAS</h4>
-                            <p data-i18n="global.company.desc">Based in South America with operations in Colombia and Ecuador, INSA Ingeniería SAS brings over 13 years of excellence in industrial automation, instrumentation, digitalization, renewable energy, and electrification projects.</p>
+                            <p data-i18n="global.company.desc">Founded around 2010 and based in South America with operations in Colombia and Ecuador, INSA Ingeniería SAS brings over 15 years of excellence in industrial automation, instrumentation, digitalization, renewable energy, and electrification projects.</p>
                         </div>
 
                         <div class="global-card">
