fix: remove exclusive claims, use legally safer competitive positioning
- Updated hero section: 'The only company...' → 'A rare combination of capabilities...'
- Replaced exclusive language across English and Spanish versions
- Maintains strong differentiation while using legally defensible language
- Focus shifted to 'what we do' rather than 'what others can't do'
- Meta description and hero copy now comply with legal safety standards

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INSA Group - We Build It. We Secure It. | Complete Industrial & Defense Solutions</title>
-    <meta name="description" content="The only company that builds AND secures your industrial systems. INSA Group combines 15 years of engineering excellence with cutting-edge cybersecurity - delivering turnkey solutions you can trust.">
+    <meta name="description" content="A rare combination: we build AND secure your industrial systems. INSA Group combines 15 years of engineering excellence with cutting-edge cybersecurity - delivering turnkey solutions you can trust.">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -154,7 +154,7 @@
                         <span class="sector-badge" data-i18n="hero.badge.secure"><i class="fas fa-shield-halved"></i> WE SECURE</span>
                     </div>
                     <h1 class="hero-title" data-i18n="hero.title">We Build It. We Secure It.<br><span class="gradient-text">Complete Industrial & Defense Solutions</span></h1>
-                    <p class="hero-description" data-i18n="hero.description">The only company that designs, builds, AND secures your industrial systems. INSA Group combines 15 years of engineering excellence with cutting-edge cybersecurity - delivering turnkey solutions you can trust.</p>
+                    <p class="hero-description" data-i18n="hero.description">A rare combination of capabilities: we design, build, AND secure your industrial systems. INSA Group combines 15 years of engineering excellence with cutting-edge cybersecurity - delivering turnkey solutions you can trust.</p>
                     <div class="hero-cta">
                         <a href="#contact" class="btn btn-large btn-primary" data-i18n="hero.cta.build">Build with INSA</a>
                         <a href="#services" class="btn btn-large btn-outline" data-i18n="hero.cta.secure">Secure with INSA</a>
